--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,6 +28,7 @@ subjects:
 - !lcsh 'Essays'
 - !lcsh 'Art'
 - !lcsh 'Literature'
+- GITenberg
 title: 'On the Old Road  Vol. 1  (of 2)
 
   A Collection of Miscellaneous Essays and Articles on Art and Literature'
